--- a/index.html
+++ b/index.html
@@ -4,20 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto IOT Revolucionário</title>
+    <title>AcquaTech</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-    <h1>Eu sou um título</h1>
-    <h3>Eu sou um subtitulo</h3>
-    <span>Eu sou um texto normal</span><br>
-    <span class="destaque">Eu sou um texto normal</span><br>
-    <span>Eu sou um texto normal</span><br>
-    <span>Eu sou um texto normal</span><br>
-    <span>Eu sou um texto normal</span><br>
-    <b>Eu estou em negrito</b>
-    <i class="destaque" id="destaqueEspecial"> e eu estou em italico</i><br>
+   <div class="header">
+       <div class="container">
+           <h1>
+               AcquaTech
+           </h1>
 
+           <ul class="navbar">
+               <li><a href="Inicio.html">Inicio</a></li>
+               <li><a href="simulador.html">Simulador</a></li>
+               <li><a href="login.html">Login</a></li>
+               <li><a href="cadastro.html">Cadastro</a></li>
+           </ul>
+       </div>
+
+   </div>
+<div class="container">
+    <p>asasasas</p>
+    <p>asasasas</p>
+    <p>asasasas</p>
+</div>
 </body>
 </html>
