--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
            </h1>
 
            <ul class="navbar">
-               <li><a href="Inicio.html">Inicio</a></li>
+               <li class="agora"><a href="index.html">Inicio</a></li>
                <li><a href="simulador.html">Simulador</a></li>
                <li><a href="login.html">Login</a></li>
                <li><a href="cadastro.html">Cadastro</a></li>
@@ -24,10 +24,20 @@
        </div>
 
    </div>
-<div class="container">
-    <p>asasasas</p>
-    <p>asasasas</p>
-    <p>asasasas</p>
-</div>
+    <div class="banner">
+        <div class="container">
+            <p>Preservando o <b>hoje</b> para existirem <b>amanhã</b>.</p>
+
+        </div>
+    
+    </div>
+
+    <div class="footer">
+        <div class="container">
+            <h4>Feito com amor por um aluno SPTech &copy;2022</h4>
+
+        </div>
+    
+    </div>
 </body>
 </html>
