--- a/index.html
+++ b/index.html
@@ -31,6 +31,32 @@
         </div>
     
     </div>
+ <div class="conteudo">
+
+    <div class="container">
+     
+        <div class="imagens">
+            <img src="planet-earth_color.png"> 
+            <h2> Missão</h2>
+            <p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua.</p>
+         </div>
+
+        <div class="imagens"> 
+            <img src="lightbulb_color.png">
+            <h2> Visão</h2>
+            <p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et dolore magna aliqua. </p>
+        </div>
+
+        <div class="imagens"> 
+         <img src="growth_color.png">
+            <h2> Valores</h2>
+            <p> ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            tempor incididunt ut labore et</p>
+        </div>
+    </div>
+  </div>
 
     <div class="footer">
         <div class="container">
